Fixed invisible welcome on signin modal

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -50,7 +50,6 @@ nav img {
 }
 
 .modal h1 {
-  color: white;
   font-size: 2.3em;
   font-weight: bold;
 }
